public/style.less
// Dark Mode Theme Variables
@dark-bg-color: #333; // Dark background color
@dark-text-color: #fff; // Light text color for contrast
@button-hover-bg-color: #555; // Slightly lighter background color for hover state
@button-hover-text-color: #ddd; // Slightly darker text color for hover state

@font-face {
  font-family: "TNG_Title";
  src: url("https://code.deanpool.net/fonts/TNG_Title.woff2");
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  overflow-y: auto;
  // background: linear-gradient(
  //   200.96deg,
  //   #01154e -29.09%,
  //   #5796dd 51.77%,
  //   #7a2c9e 129.35%
  // );
}

.flex-container {
  display: flex;
  flex-direction: column;
  height: 100vh; // Full height of the viewport
  width: 100vw; // Full width of the viewport
  overflow: hidden; // Prevents content from overflowing the container
}

.editor-container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

#resizeHandle {
  height: 5px;
  cursor: ns-resize;
  background-color: #ccc;
}

#monaco-editor-toolbar {
  flex: 0 1 auto; // Adjusted to only take the space it needs without growing
  max-height: 10%; // Limits the toolbar to 10% of the container's height
  // darkmode background
  background-color: #333;
  // fontAwesome buttons should also be dark
}

#monaco-editor-moocode {
  flex: 9; // Takes up the remaining space
  // Ensures it fills 90% of the container's height
}

#SdWiqHtqa {
  min-height: 10%;
  width: 100%;
  background-color: black;
  color: white;
  flex-grow: 1;
  resize: none;
  // Removed flex-grow to allow content-based sizing
}

#AZUHz3kQsgMj {
  max-height: 90%;
  width: 100%;
  background-color: black;
  color: white;
  overflow-y: scroll;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  white-space: break-spaces;
  flex-shrink: 1; // Keeps this to fill remaining space
}

#appRoot {
  display: flex;
  flex-direction: column;
  align-items: center;
  .cards-container {
    display: flex;
    flex-wrap: wrap;
    align-self: center;
    gap: 5px; /* Adjust based on your design */
    
  }
}





.button-row {
  display: flex;
  justify-content: center; // Centers the buttons in the button row
  gap: 1px; // Reduces the space between buttons for a closer appearance

  padding-top: 10px;
  padding-bottom: 5px;
}

// Button Styles
button {
  background-color: @dark-bg-color;
  color: @dark-text-color;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s;
  align-content:center;
  vertical-align: middle;

  &:hover {
    background-color: @button-hover-bg-color;
    color: @button-hover-text-color;
  }

  i.fas {
    //margin-right: 5px; // Optional: Adjust if you add text to buttons
  }
}

/* Example of how you might style control buttons if you add them */
.control-buttons {
  display: flex;
  gap: 8px; /* Space between buttons */
}

.control-button {
  width: 12px;
  height: 12px;
  border-radius: 50%; /* Make them circular */
  background-color: #fff; /* White background */
}

.cards-container {
  padding:5em;
}
.card {
  display: flex;
  flex-direction: column;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  width:20em;
}

.card-content {
  flex-grow: 1; /* Allow the main content to take up available space, pushing the .button-row to the bottom */
  /* Add styling for your main content here */
}

.host-label {
  margin: 0;
  display: flex;
  align-items: center; /* Aligns the label text and input field */
  gap: 5px; /* Space between the label text and the input field */
  color: #545050;
  font-weight: 600; /* Modern UIs often use semi-bold or bold labels */
  font-size: 16px; /* Adjust based on your design */
}
.card-text {
  margin: 0; /* Removes default margin */
  font-size: 16px; /* Consistent font size with labels */
  color: #9f9a9a; /* Dark gray text color */
}
.fa-check-square,
.fa-square {
  cursor: pointer;
}
.checkbox-hidden {
  display: none;
}
.checkbox-hidden + label .fa-square {
  display: inline-block;
}
.checkbox-hidden:checked + label .fa-square {
  display: none;
}
.checkbox-hidden + label .fa-check-square {
  display: none;
}
.checkbox-hidden:checked + label .fa-check-square {
  display: inline-block;
}
.addSite-button {
  // position it in the bottom right of the screen
  position: fixed;
  bottom: 20px;
  right: 20px;
}
.card-title-bar {
  // background-colour should be a gradient
  background: linear-gradient(90deg, #2d3338 0%, #112131 100%);
  width: 100%;
  align-content: center;
  display: flex; /* Use flexbox for layout */
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  opacity: 60%;

  font-weight: bold; /* Bold text */
}

.details
{
  display: flex;
  flex-direction: column;
  gap: 5px;
  padding: 10px;

}

.card-title {
  margin: 0; /* Remove default margin from <h5> */
  padding: 0.5rem; /* Add padding to the title */
  color: #98a39e;
  // shadow the text
  text-shadow: 2px 2px 4px #000000;
}

.connection-manager-title {
  font-family: "TNG_title"; /* Soft, modern font */
  color: #2b53a7; /* Soft, dark gray color */
  font-size: 48px; /* Large font size */
  text-align: center; /* Center-aligns the text */
  padding: 20px 0; /* Adds more padding above and below the text */
  border-radius: 10px; /* Slightly rounded corners for a modern look */
  margin: 20px auto; /* Centers the title block with auto margins */
  width: fit-content; /* Ensures the background only covers the text */
  padding: 10px 20px; /* Adequate padding around the text */
}

